# ubiquitous-octo-computing-machine

./: LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  setup.cfg
.github/workflows/: branch.yml  pr-close.yml  python-package.yml
mypackage/: cli.py
mypackage/data/: random_file.json
tests/: __init__.py  base_test.py
