
[metadata]
name = myawesomeproject
version = 0.0.1
author = Willahelm Wan
author_email = willahelm.wan@falkonry.com
description = An empty project which should stay empty since it is a template
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/vukasin/ubiquitous-octo-computing-machine
project_urls =
    Bug Tracker = https://github.com/vukasin/ubiquitous-octo-computing-machine/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Posix

[options.package_data]
mypackage = data/*.json

[options]
package_dir=
    =.
packages = find:
python_requires = >=3.8, <4
include_package_data=True
install_requires =
    importlib_resources
    pydantic
    numpy
    
[options.extras_require]
dev =
    bandit
    autopep8
    black
    pytest
    pyright

[options.entry_points]
console_scripts =
    mycli = mypackage.cli:main

